// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Forms/FormItem Inline 1`] = `
<div
  className="fd-form-item fd-form-item--horizontal"
>
  <label
    className="fd-form-label"
    htmlFor="input-1"
  >
    Default Input
  </label>
  <input
    className="fd-input"
    id="input-1"
    placeholder="Field placeholder text"
    type="text"
  />
</div>
`;

exports[`Storyshots Component API/Forms/FormItem No Styles 1`] = `
<div
  className="xxx-form-item"
>
  <label
    className="xxx-form-label"
    htmlFor="input-1"
  >
    Default Input
  </label>
  <input
    className="xxx-input"
    id="input-1"
    placeholder="Field placeholder text"
    type="text"
  />
</div>
`;

exports[`Storyshots Component API/Forms/FormItem Primary 1`] = `
<div
  className="fd-form-item"
>
  <label
    className="fd-form-label"
    htmlFor="input-1"
  >
    Default Input
  </label>
  <input
    className="fd-input"
    id="input-1"
    placeholder="Field placeholder text"
    type="text"
  />
</div>
`;
